--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native-elements": "^1.2.7",
     "react-native-maps": "0.26.1",
     "react-native-responsive-screen": "^1.4.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
